<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_quantity"
            android:layout_marginTop="12dp"
            android:text="@string/tv_date"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_quantity"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txtCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/tv_item"
            android:text="@string/item_name"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/tv_item"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/update_icon"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnUpdate"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:src="@drawable/delete_icon"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

        <TextView
            android:id="@+id/txtMaxCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCustomerName"
            android:layout_marginStart="21dp"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/tv_quantity"
            android:text="@string/item_count"
            card_view:layout_constraintStart_toEndOf="@+id/tv_quantity"
            card_view:layout_constraintTop_toBottomOf="@+id/txtCustomerName" />

        <TextView
            android:id="@+id/txtDateItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_quantity"
            android:layout_marginStart="48dp"
            android:layout_marginTop="13dp"
            android:text="@string/date"
            card_view:layout_constraintStart_toEndOf="@+id/tv_date"
            card_view:layout_constraintTop_toBottomOf="@+id/txtMaxCredit" />

        <TextView
            android:id="@+id/txtx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/x"
            card_view:layout_constraintStart_toEndOf="@+id/txtMaxCredit"
            card_view:layout_constraintTop_toBottomOf="@+id/txtCustomerName" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>